{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 77,
  "lineage": "f500b7a5-e839-3e9d-28f0-7a11ffdcf17e",
  "resources": [
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "my_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:transit-gateway/tgw-039249ab1b9526f7a",
            "association_default_route_table_id": "tgw-rtb-049b90e7f718602bc",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway Desc",
            "dns_support": "enable",
            "id": "tgw-039249ab1b9526f7a",
            "multicast_support": "disable",
            "owner_id": "839006695980",
            "propagation_default_route_table_id": "tgw-rtb-049b90e7f718602bc",
            "tags": {
              "Name": "my_tgw"
            },
            "tags_all": {
              "Name": "my_tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d7de3f0c9210a25",
            "association_id": "eipassoc-0115dd42c83199a1e",
            "domain": "vpc",
            "id": "eipalloc-09d7de3f0c9210a25",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-08d57e1312fd1a577",
            "private_dns": "ip-12-0-0-195.ap-southeast-1.compute.internal",
            "private_ip": "12.0.0.195",
            "public_dns": "ec2-13-215-220-51.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.220.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_nat_eip"
            },
            "tags_all": {
              "Name": "my_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:internet-gateway/igw-0d83c26cafb08ce66",
            "id": "igw-0d83c26cafb08ce66",
            "owner_id": "839006695980",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0b8bfdd6b2174aa29"
          },
          "dependencies": [
            "module.base_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d7de3f0c9210a25",
            "connectivity_type": "public",
            "id": "nat-0cf237e525cc18dbc",
            "network_interface_id": "eni-08d57e1312fd1a577",
            "private_ip": "12.0.0.195",
            "public_ip": "13.215.220.51",
            "subnet_id": "subnet-0fc625cdae42207e3",
            "tags": {
              "Name": "my_nat_gw"
            },
            "tags_all": {
              "Name": "my_nat_gw"
            }
          },
          "dependencies": [
            "module.base_infra.aws_eip.nat_eip",
            "module.base_infra.aws_subnet.subnets",
            "module.base_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_with_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:route-table/rtb-082c1266686eabcf0",
            "id": "rtb-082c1266686eabcf0",
            "owner_id": "839006695980",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d83c26cafb08ce66",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_with_ig"
            },
            "tags_all": {
              "Name": "rt_with_ig"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8bfdd6b2174aa29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infra.aws_internet_gateway.my_igw",
            "module.base_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_with_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:route-table/rtb-0248639dadd4ead0c",
            "id": "rtb-0248639dadd4ead0c",
            "owner_id": "839006695980",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cf237e525cc18dbc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_with_nat"
            },
            "tags_all": {
              "Name": "rt_with_nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8bfdd6b2174aa29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infra.aws_nat_gateway.my_nat",
            "module.base_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_with_ig_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5437b40ded3621f",
            "route_table_id": "rtb-082c1266686eabcf0",
            "subnet_id": "subnet-0fc625cdae42207e3"
          },
          "dependencies": [
            "module.base_infra.aws_internet_gateway.my_igw",
            "module.base_infra.aws_route_table.rt_with_ig",
            "module.base_infra.aws_subnet.subnets",
            "module.base_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_with_nat_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0850d10e03acfb1a7",
            "route_table_id": "rtb-0248639dadd4ead0c",
            "subnet_id": "subnet-06338b1e126238146"
          },
          "dependencies": [
            "module.base_infra.aws_eip.nat_eip",
            "module.base_infra.aws_nat_gateway.my_nat",
            "module.base_infra.aws_route_table.rt_with_nat",
            "module.base_infra.aws_subnet.subnets",
            "module.base_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d412991988698c4",
            "route_table_id": "rtb-0248639dadd4ead0c",
            "subnet_id": "subnet-0305c218d39a49846"
          },
          "dependencies": [
            "module.base_infra.aws_eip.nat_eip",
            "module.base_infra.aws_nat_gateway.my_nat",
            "module.base_infra.aws_route_table.rt_with_nat",
            "module.base_infra.aws_subnet.subnets",
            "module.base_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:subnet/subnet-0fc625cdae42207e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "12.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc625cdae42207e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839006695980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-sub-public-1a",
              "Type": "public"
            },
            "tags_all": {
              "Name": "my-sub-public-1a",
              "Type": "public"
            },
            "vpc_id": "vpc-0b8bfdd6b2174aa29"
          },
          "dependencies": [
            "module.base_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:subnet/subnet-06338b1e126238146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06338b1e126238146",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839006695980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-sub-private-1b",
              "Type": "private"
            },
            "tags_all": {
              "Name": "my-sub-private-1b",
              "Type": "private"
            },
            "vpc_id": "vpc-0b8bfdd6b2174aa29"
          },
          "dependencies": [
            "module.base_infra.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:subnet/subnet-0305c218d39a49846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0305c218d39a49846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839006695980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-sub-private-1c",
              "Type": "private"
            },
            "tags_all": {
              "Name": "my-sub-private-1c",
              "Type": "private"
            },
            "vpc_id": "vpc-0b8bfdd6b2174aa29"
          },
          "dependencies": [
            "module.base_infra.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:839006695980:vpc/vpc-0b8bfdd6b2174aa29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-08347a1b845feb3bc",
            "default_route_table_id": "rtb-015ac159798799e2e",
            "default_security_group_id": "sg-03a76a03ecde330b5",
            "dhcp_options_id": "dopt-be8585d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b8bfdd6b2174aa29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015ac159798799e2e",
            "owner_id": "839006695980",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}